postgresql-common (14) experimental; urgency=low

  * pg_ctlcluster: Check whether mutually exclusive log_*_stats are enabled
    to avoid the "FATAL:  invalid cache id: 30" error on client invocations.

 -- Martin Pitt <mpitt@debian.org>  Sun,  5 Jun 2005 09:09:41 +0200

postgresql-common (13) experimental; urgency=low

  * pg_createcluster: Add option --start to start the new cluster right after
    creating it.
  * tests/000_existing_clusters: Check for stale postmaster and pg_autovacuum
    processes.
  * testsuite:
    - Temporarily stop existing servers and move away existing files before
      executing the tests.
    - Restore the original files after the tests.
  * pg_upgradecluster: Check return value of pg_dumpall and psql and fail if
    they are not successful.
  * pg_createuser: Fix indentation of socket warning.
  * pg_upgradecluster: Check if cluster is running, exit with an error if not.
  * pg_createcluster: Added option --encoding to override detection from
    locale.
  * pg_createcluster: Guess default encoding from locale for clusters older
    than 8.0 to get the same behaviour as for 8.0.
  * debian/control: Conflict to postgresql-7.4 << 1:7.4.8-5 since earlier
    versions do not support non-ASCII encodings (due to missing pg_encoding).
  * pg_ctlcluster: Check that the cluster owner uid/gid really exist.
    Closes: #311546
  * pg_lsclusters: Ensure that there is at least one space between the colums.
  * Added tests/100_encodings which checks cluster creation and updates
    for different encodings and locales.
  * pg_upgradecluster: Preserve socket directory, locales, and encoding.
  * tests/100_encodings: Check the locale the postmaster is running under.

 -- Martin Pitt <mpitt@debian.org>  Sat,  4 Jun 2005 15:44:40 +0200

postgresql-common (12) experimental; urgency=low

  * pg_ctlcluster: Remove "status" command, it's not documented and not
    really useful.
  * PgCommon: Fix cluster_info for avac_logfile to make pg_dropcluster clean