@@ -1,0 +1,11 @@
+#!/bin/sh -e
+
+# Test checking of invalid configurations.
+
+pg_createcluster 7.4 pg74
+echo "log_statement_stats = true
+log_planner_stats = true" >> /etc/postgresql/7.4/pg74/postgresql.conf
+pg_ctlcluster -s 7.4 pg74 start || true
+pg_lsclusters
+pg_dropcluster 7.4 pg74
+pg_lsclusters
