@@ -1,0 +1,9 @@
+Creating new cluster (configuration: /etc/postgresql/7.4/pg74, data: /var/lib/postgresql/7.4/pg74)...
+Moving configuration file /var/lib/postgresql/7.4/pg74/pg_hba.conf to /etc/postgresql/7.4/pg74...
+Moving configuration file /var/lib/postgresql/7.4/pg74/pg_ident.conf to /etc/postgresql/7.4/pg74...
+Moving configuration file /var/lib/postgresql/7.4/pg74/postgresql.conf to /etc/postgresql/7.4/pg74...
+Configuring postgresql.conf to use port 5432...
+Error: invalid postgresql.conf: log_statement_stats and the other log_*_stats options are mutually exclusive
+Version Cluster   Port Status Owner    Data directory                     Log file                       
+7.4     pg74      5432 down   postgres /var/lib/postgresql/7.4/pg74       /var/log/postgresql/postgresql-7.4-pg74.log 
+Version Cluster   Port Status Owner    Data directory                     Log file                       
