@@ -2,8 +2,9 @@ postgresql-common (14) experimental; urgency=low
 
   * pg_ctlcluster: Check whether mutually exclusive log_*_stats are enabled
     to avoid the "FATAL:  invalid cache id: 30" error on client invocations.
+  * Added test 110_invalid_conf: test checking of invalid configurations.
 
- -- Martin Pitt <mpitt@debian.org>  Sun,  5 Jun 2005 09:09:41 +0200
+ -- Martin Pitt <mpitt@debian.org>  Sun,  5 Jun 2005 09:22:21 +0200
 
 postgresql-common (13) experimental; urgency=low
 
